<resources>
    <string name="app_name">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
    <string name="register">register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="clicktoregister">Click to register</string>
    <string name="clicktologin">Click to login</string>
</resources>